Enabled ink drop highlight for focus on bookmark bar buttons.

This is fixing a regression caused by
https://codereview.chromium.org/2447523002.

BUG=666192

Review-Url: https://codereview.chromium.org/2508243002
Cr-Commit-Position: refs/heads/master@{#432994}

Former-commit-id: a57939b6193ccb89fc70aa624a6f29140efac422